Fix: align container grid areas with HTML and remove header grid-area

--- a/css/style.css
+++ b/css/style.css
@@ -16,20 +16,18 @@ body {
 .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, auto);
+    grid-template-rows: repeat(5, auto);
     min-height: 100vh;
     width: 100%;
     grid-template-areas:
-        "header header"
         "home home"
         "about about"
-        "promotions promotions"
+        "products products"
         "contacts contacts"
         "footer footer";
 }
 
 .header {
-    grid-area: header;
     display: flex;
     flex-direction: column;
     background-color: transparent;
